# kiwioptics

./: migrate.json  pyproject.toml  requirements.txt
medidas/management/commands/: generate_data.py  migrate_data.py
medidas/migrations/: 0023_auto_20210525_1106.py  0024_auto_20210525_1106.py
users/templates/: base_users.html
users/templates/users/: login.html  signup.html  signup_google.html
