[tool.poetry]
name = "kiwioptics"
version = "0.1.0"
description = ""
authors = ["SolanoJason <pajason2000@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.9.4"
django = "3.1.6"
djangorestframework = "3.12.2"
python-decouple = "3.4"
firebase-admin = "4.5.2"
django-widget-tweaks = "1.4.8"
django-storages = "1.11.1"
psycopg2 = "2.8.6"
termcolor = "1.1.0"
pillow = "8.1.2"
django-weasyprint = "1.1.0"
whitenoise = "5.2.0"
gunicorn = "20.1.0"
grpcio = "1.35.0"
factory-boy = "3.2.0"
dj-static = "0.0.6"
dj-database-url = "0.5.0"
boto3 = "1.17.53"
autopep8 = "1.5.6"
validate-email = "1.3"
weasyprint = "52.4"


[tool.poetry.group.dev.dependencies]
deptry = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
